// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NHSHeader component rendered component should match snapshot (cy) 1`] = `
<div>
  <header
    class="nhsuk-header nhsuk-header--transactional"
    role="banner"
  >
    <div
      class="nhsuk-width-container nhsuk-header__container"
    >
      <div
        class="nhsuk-header__logo nhsuk-header__logo--only"
      >
        <a
          aria-label="NHS homepage"
          class="nhsuk-header__link"
          href="/"
        >
          <svg
            aria-labelledby="nhsuk-logo_title"
            class="nhsuk-logo"
            focusable="false"
            role="img"
            viewBox="0 0 40 16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title
              id="nhsuk-logo_title"
            >
              NHS Logo
            </title>
            <path
              class="nhsuk-logo__background"
              d="M0 0h40v16H0z"
            />
            <path
              class="nhsuk-logo__text"
              d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            />
            <image
              src="https://assets.nhs.uk/images/nhs-logo.png"
              xlink:href=""
            />
          </svg>
        </a>
      </div>
      <div
        class="nhsuk-header__transactional-service-name"
      >
        <a
          class="nhsuk-header__transactional-service-name--link"
          href="/"
        >
          Rhyngweithiol
        </a>
      </div>
      <div
        class="relative max-lg:absolute max-lg:right-4 float-right inline-block text-left"
        data-headlessui-state=""
      >
        <div>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
            data-headlessui-state=""
            id="language-button"
            type="button"
          >
            Iaith
            <svg
              aria-hidden="true"
              class="-mr-1 h-5 w-5 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
              />
              <path
                d="M3.6 9l16.8 0"
              />
              <path
                d="M3.6 15l16.8 0"
              />
              <path
                d="M11.5 3a17 17 0 0 0 0 18"
              />
              <path
                d="M12.5 3a17 17 0 0 1 0 18"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`NHSHeader component rendered component should match snapshot (en) 1`] = `
<div>
  <header
    class="nhsuk-header nhsuk-header--transactional"
    role="banner"
  >
    <div
      class="nhsuk-width-container nhsuk-header__container"
    >
      <div
        class="nhsuk-header__logo nhsuk-header__logo--only"
      >
        <a
          aria-label="NHS homepage"
          class="nhsuk-header__link"
          href="/"
        >
          <svg
            aria-labelledby="nhsuk-logo_title"
            class="nhsuk-logo"
            focusable="false"
            role="img"
            viewBox="0 0 40 16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title
              id="nhsuk-logo_title"
            >
              NHS Logo
            </title>
            <path
              class="nhsuk-logo__background"
              d="M0 0h40v16H0z"
            />
            <path
              class="nhsuk-logo__text"
              d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            />
            <image
              src="https://assets.nhs.uk/images/nhs-logo.png"
              xlink:href=""
            />
          </svg>
        </a>
      </div>
      <div
        class="nhsuk-header__transactional-service-name"
      >
        <a
          class="nhsuk-header__transactional-service-name--link"
          href="/"
        >
          Interactive
        </a>
      </div>
      <div
        class="relative max-lg:absolute max-lg:right-4 float-right inline-block text-left"
        data-headlessui-state=""
      >
        <div>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
            data-headlessui-state=""
            id="language-button"
            type="button"
          >
            Language
            <svg
              aria-hidden="true"
              class="-mr-1 h-5 w-5 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
              />
              <path
                d="M3.6 9l16.8 0"
              />
              <path
                d="M3.6 15l16.8 0"
              />
              <path
                d="M11.5 3a17 17 0 0 0 0 18"
              />
              <path
                d="M12.5 3a17 17 0 0 1 0 18"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`NHSHeader component rendered component should match snapshot (gd) 1`] = `
<div>
  <header
    class="nhsuk-header nhsuk-header--transactional"
    role="banner"
  >
    <div
      class="nhsuk-width-container nhsuk-header__container"
    >
      <div
        class="nhsuk-header__logo nhsuk-header__logo--only"
      >
        <a
          aria-label="NHS homepage"
          class="nhsuk-header__link"
          href="/"
        >
          <svg
            aria-labelledby="nhsuk-logo_title"
            class="nhsuk-logo"
            focusable="false"
            role="img"
            viewBox="0 0 40 16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title
              id="nhsuk-logo_title"
            >
              NHS Logo
            </title>
            <path
              class="nhsuk-logo__background"
              d="M0 0h40v16H0z"
            />
            <path
              class="nhsuk-logo__text"
              d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            />
            <image
              src="https://assets.nhs.uk/images/nhs-logo.png"
              xlink:href=""
            />
          </svg>
        </a>
      </div>
      <div
        class="nhsuk-header__transactional-service-name"
      >
        <a
          class="nhsuk-header__transactional-service-name--link"
          href="/"
        >
          Ìre-thaiceil
        </a>
      </div>
      <div
        class="relative max-lg:absolute max-lg:right-4 float-right inline-block text-left"
        data-headlessui-state=""
      >
        <div>
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
            data-headlessui-state=""
            id="language-button"
            type="button"
          >
            Cànan
            <svg
              aria-hidden="true"
              class="-mr-1 h-5 w-5 text-gray-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
              />
              <path
                d="M3.6 9l16.8 0"
              />
              <path
                d="M3.6 15l16.8 0"
              />
              <path
                d="M11.5 3a17 17 0 0 0 0 18"
              />
              <path
                d="M12.5 3a17 17 0 0 1 0 18"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;
